--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -32,10 +32,10 @@
             <div class="modal-content">
               <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Modal Header</h4>
+                <h4 class="modal-title">Edit form</h4>
               </div>
               <div class="modal-body">
-                <p>Some text in the modal.</p>
+                <p>please enter all fields</p>
                 <form id="editForm" action="/edit" method="POST">
                   <input type="hidden" name="indexmodal" value="<%= i %>">
                   <label for="name">name</label>
